# slac-pytorch

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  train.py  train_obs.py
apptainer/: build.sh  environment.def  run.sh
data/agents/: ant.xml  cheetah.xml  half_cheetah.xml
data/configs/: default.json
slac_pytorch/: algo.py  buffer.py  env.py  trainer.py  utils.py
slac_pytorch/common/: utils.py  xml_manager.py
slac_pytorch/environments/: gym_wrappers.py  wrappers.py
slac_pytorch/models/nctrl/: __init__.py  hmm.py  nets.py  simulation.py
slac_pytorch/models/slac/: __init__.py  latent.py  sac.py
slac_pytorch/network/: latent.py
