[tool.poetry]
name = "slac.pytorch"
version = "0.5.0"
description = "Stochastic Latent Actor-Critic (SLAC) in PyTorch (updated fork from https://github.com/toshikwa/slac.pytorch)"
authors = ["Rody Haket"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "slac_pytorch" }
]


[tool.poetry.dependencies]
python = ">=3.10"
gymnasium = ">=0.29.0"
tqdm = ">=4.66.4"
pandas = ">=2.2.1"
tensorboard= ">=2.15.1"
torch= ">=2.1.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
